# FDESolverServer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  conanfile.py  docker-compose.yml
core/: CMakeLists.txt
core/Client/src/: main.py
core/Client/src/static/scripts/: main.js
core/Client/src/static/templates/: base.html  styles.css
core/Client/src/templates/: base.html  index.html
core/Server/: CMakeLists.txt  main.cpp
core/client/: Dockerfile  client.go  client.py  go.mod  go.sum  requirements.txt
core/client/cli/: cli.go  go.mod  go.sum  result.html
core/client/client_impl/: client_impl.go
core/client/drawer/: drawer.go  go.mod  go.sum
core/client/libs/: logger.py  result_drawer.py  results.py
core/client/protos/: go.mod  matrix.pb.go  result.pb.go  server.pb.go
core/client/router/: router.go
core/client/server/: client.go  go.mod  go.sum
core/client/server/router/: router.go
core/client/server/server_impl/: server_impl.go
core/client/server/static/scripts/: form.js
core/client/server/static/templates/: base.html  config_example.html  index.html
core/client/src/: main.py  router.py
core/client/src/static/scripts/: main.js
core/client/src/static/templates/: base.html  index.html
core/client/static/scripts/: main.js
core/client/static/templates/: base.html  config_example.html  index.html  styles.css
core/client_go/: client.go  go.mod  go.sum
core/client_go/client/: client_impl.go
core/client_go/drawer/: drawer.go
core/client_go/router/: router.go
core/client_go/static/templates/: base.html  index.html
core/protos/: CMakeLists.txt  config.proto  matrix.proto  result.proto  server.proto
core/protos/cpp/: config.pb.cc  config.pb.h  matrix.pb.h  result.pb.cc  result.pb.h  server.grpc.pb.cc  server.grpc.pb.h  server.pb.cc  server.pb.h
core/protos/py/: config_pb2.py  result_pb2.py
core/server/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  build.bat  conanfile.py  log.txt  main.cpp  perf.data  perf.data.old  result.txt  server.cpp  test_res1.txt  test_res2.txt  test_res3.txt  test_res4.txt
core/server/cli/: CMakeLists.txt  cli.cpp
core/server/cmake/: check_os.cmake  dependencies.cmake  library_vars.cmake  output.cmake
core/server/expression_calculator/: CMakeLists.txt  math_expression_calculator.cpp  math_expression_calculator.h
core/server/expression_calculator/cmake/: def_antlr_target.cmake
core/server/expression_calculator/grammar/: CMakeLists.txt  TLexer.g4  TParser.g4
core/server/expression_calculator/grammar/.antlr/: TLexer.interp  TLexer.java  TParser.interp  TParser.java  TParser.tokens  TParserBaseListener.java  TParserLexer.interp  TParserLexer.java  TParserLexer.tokens  TParserListener.java  TParserParser.java
core/server/expression_calculator/src/: math_expression_calculator.cpp  math_expression_calculator.h  math_expression_calculator.hpp
core/server/expression_calculator/src/tests/: mec_test.cpp
core/server/fde_solver/: CMakeLists.txt
core/server/fde_solver/libs/: CMakeLists.txt  equation_solver.cpp  equation_solver.hpp  mfdes.hpp  rules_impl.cpp  sfdes.hpp
core/server/fde_solver/libs/linalg/: CMakeLists.txt  matrix.cpp  matrix.hpp
core/server/fde_solver/libs/logger/: CMakeLists.txt
core/server/fde_solver/libs/python/: result_drawer.py
core/server/fde_solver/libs/utils/: CMakeLists.txt
core/server/fde_solver/linalg/: CMakeLists.txt  matrix.cpp  matrix.hpp
core/server/fde_solver/linalg/tests/: linalg_test.cpp  matrix_test.cpp  plu_test.cpp  solve_test.cpp
core/server/fde_solver/logger/: CMakeLists.txt  logger.cpp  logger.hpp
core/server/fde_solver/src/: config.cpp  config.hpp  equation_solver.cpp  equation_solver.hpp  mfdes.cpp  mfdes.hpp  rules_impl.cpp  rules_impl.hpp  sfdes.cpp  sfdes.hpp
core/server/fde_solver/tests/: binsearch_test.cpp  test_result.txt
core/server/fde_solver/utils/: CMakeLists.txt  utils.cpp  utils.hpp
core/server/other/: CMakeLists.txt
core/server/other/argparser/: CMakeLists.txt  argument_parser.cpp  argument_parser.hpp
core/server/other/logger/: CMakeLists.txt  logger.cpp  logger.hpp
core/server/other/math/: CMakeLists.txt  math_utils.cpp  math_utils.hpp
core/server/other/stacktracer/: CMakeLists.txt  stacktracer.cpp  stacktracer.hpp
core/server/other/timer/: timer.hpp
core/server/other/utils/: CMakeLists.txt  utils.hpp
core/server/protos/: CMakeLists.txt  config.proto  matrix.proto  result.proto  server.proto
core/server/protos/cpp/: config.pb.cc  config.pb.h  matrix.pb.cc  result.pb.cc  result.pb.h  server.grpc.pb.h  server.pb.cc
core/server/protos/go/: config.pb.go  matrix.pb.go  result.pb.go  server.pb.go  server_grpc.pb.go
core/server/protos/py/: matrix_pb2.py  result_pb2.py  server_pb2.py  server_pb2_grpc.py
core/server/service/: CMakeLists.txt  service_impl.cpp  service_impl.hpp
core/server/src/: cli.cpp  server.cpp  server_impl.cpp  server_impl.hpp  service_impl.cpp  service_impl.hpp
core/server/utils/: CMakeLists.txt
core/server/utils/logger/: CMakeLists.txt  logger.cpp  logger.hpp
core/server/utils/math/: CMakeLists.txt  math_utils.hpp
core/server/utils/other/: CMakeLists.txt  utils.cpp
core/server/utils/stacktracer/: CMakeLists.txt  stacktracer.hpp
core/server/utils/timer/: CMakeLists.txt
core/server_/expression_calculator/: CMakeLists.txt  math_expression_calculator.h
core/tasks/: solve.bat  task1.txt  task2.txt  task3.txt  task4.txt
images/: FDESolver.html
